samples/_failures_safe/1761150445_2d0604_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02a189b1.c: In function ‘main’:
./samples/SAFE/__tmp_02a189b1.c:138:5: error: expected expression at end of input
  138 |     uint8_t test_data2[] = {0x57,
      |     ^~~~~~~
./samples/SAFE/__tmp_02a189b1.c:138:5: error: expected declaration or statement at end of input
